--- a/src/scss/mainAppComponents/_billing.scss
+++ b/src/scss/mainAppComponents/_billing.scss
@@ -34,8 +34,6 @@
 .billing-bill-table {
   min-width: 500px;
   width: 100%;
-  border-collapse: separate;
-  border-spacing: 0;
 
   th,
   td {
